syntax = "proto3";
package errors;

enum SubmitProvenTransactionError {
    INTERNAL_ERROR = 0;
    DESERIALIZATION_FAILED = 1;
    INVALID_TRANSACTION_PROOF = 2;
    INCORRECT_ACCOUNT_INITIAL_COMMITMENT = 3;
    INPUT_NOTES_ALREADY_CONSUMED = 4;
    UNAUTHENTICATED_NOTES_NOT_FOUND = 5;
    OUTPUT_NOTES_ALREADY_EXIST = 6;
    TRANSACTION_EXPIRED = 7;
}
